sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:10: error: not found: value c
      copie(i-1-c,i-c)
                ^AlgInsertionSort:10: error: not found: value c
      copie(i-1-c,i-c)
                    ^AlgInsertionSort:11: error: not found: value c
      c+=1
      ^AlgInsertionSort:12: error: not found: value c
      test=plusPetit(i-1-c,v)
                         ^AlgInsertionSort:14: error: not found: value c
    setValeur(i-1-c,v)
                  ^